--- a/index.html
+++ b/index.html
@@ -12,22 +12,14 @@
     <div class="app-shell">
       <header class="app-header">
         <div class="app-title">
-          <h1>RegExp Tester</h1>
-          <p class="app-subtitle">Test patterns, inspect matches, and format output fast.</p>
+          <h1>RegEx Tester</h1>
         </div>
-        <button class="chip-btn ghost-btn" id="openCheatSheetBtn">
-          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
-            <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z" />
-            <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z" />
-          </svg>
-          Cheat Sheet
-        </button>
       </header>
 
       <main class="tester-layout">
         <section class="panel regex-panel">
           <div class="control-row">
-            <span class="row-label">RegExp</span>
+            <span class="row-label">RegEx</span>
             <div class="row-actions">
               <button class="chip-btn icon-only" id="pasteRegexBtn" data-tooltip="Paste from clipboard" aria-label="Paste regex from clipboard">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
@@ -49,17 +41,10 @@
                   <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2" />
                 </svg>
               </button>
-              <button class="icon-btn" id="toggleOptionsBtn" data-tooltip="Options" aria-expanded="false" aria-controls="regexOptions">
+              <button class="chip-btn icon-only ghost-btn" id="openCheatSheetBtn" data-tooltip="Regex cheat sheet" aria-label="Open regex cheat sheet">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
-                  <line x1="4" y1="21" x2="4" y2="14" />
-                  <line x1="4" y1="10" x2="4" y2="3" />
-                  <line x1="12" y1="21" x2="12" y2="12" />
-                  <line x1="12" y1="8" x2="12" y2="3" />
-                  <line x1="20" y1="21" x2="20" y2="16" />
-                  <line x1="20" y1="12" x2="20" y2="3" />
-                  <line x1="1" y1="14" x2="7" y2="14" />
-                  <line x1="9" y1="8" x2="15" y2="8" />
-                  <line x1="17" y1="16" x2="23" y2="16" />
+                  <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z" />
+                  <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z" />
                 </svg>
               </button>
             </div>
@@ -78,22 +63,6 @@
             <div class="regex-error" id="regexError" aria-live="polite"></div>
           </div>
 
-          <div class="regex-options" id="regexOptions" hidden>
-            <div class="flags">
-              <span class="options-label">Flags</span>
-              <button class="flag-btn active" data-flag="g" data-tooltip="Global match" aria-pressed="true">g</button>
-              <button class="flag-btn" data-flag="i" data-tooltip="Ignore case" aria-pressed="false">i</button>
-              <button class="flag-btn" data-flag="m" data-tooltip="Multiline" aria-pressed="false">m</button>
-              <button class="flag-btn" data-flag="s" data-tooltip="Dot matches newline" aria-pressed="false">s</button>
-              <button class="flag-btn" data-flag="u" data-tooltip="Unicode" aria-pressed="false">u</button>
-              <button class="flag-btn" data-flag="y" data-tooltip="Sticky" aria-pressed="false">y</button>
-            </div>
-            <label class="toggle">
-              <input type="checkbox" id="highlightToggle" checked />
-              <span>Highlight matches</span>
-            </label>
-          </div>
-
           <div class="control-row">
             <span class="row-label">Text</span>
             <button class="chip-btn icon-only" id="pasteTextBtn" data-tooltip="Paste from clipboard" aria-label="Paste text from clipboard">
@@ -102,6 +71,23 @@
                 <rect x="8" y="2" width="8" height="4" rx="1" ry="1" />
               </svg>
             </button>
+            <div class="flags-center">
+              <div class="regex-options compact" id="regexOptions">
+                <div class="flags">
+                  <span class="options-label">Flags</span>
+                  <button class="flag-btn active" data-flag="g" data-tooltip="Global match" aria-pressed="true">g</button>
+                  <button class="flag-btn" data-flag="i" data-tooltip="Ignore case" aria-pressed="false">i</button>
+                  <button class="flag-btn" data-flag="m" data-tooltip="Multiline" aria-pressed="false">m</button>
+                  <button class="flag-btn" data-flag="s" data-tooltip="Dot matches newline" aria-pressed="false">s</button>
+                  <button class="flag-btn" data-flag="u" data-tooltip="Unicode" aria-pressed="false">u</button>
+                  <button class="flag-btn" data-flag="y" data-tooltip="Sticky" aria-pressed="false">y</button>
+                </div>
+                <label class="toggle">
+                  <input type="checkbox" id="highlightToggle" checked />
+                  <span>Highlight matches</span>
+                </label>
+              </div>
+            </div>
             <div class="match-nav">
               <button class="icon-btn nav-btn" id="prevMatchBtn" aria-label="Previous match">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
