update sample text and toast notofication

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </label>
           </div>
 
-          <div class="control-row">
+          <div class="control-row text-row">
             <span class="row-label">Text</span>
             <button class="chip-btn icon-only" id="pasteTextBtn" data-tooltip="Paste from clipboard" aria-label="Paste text from clipboard">
               <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
@@ -242,6 +242,8 @@
         </div>
       </div>
     </div>
+
+    <div class="toast-stack" id="toastStack" aria-live="polite"></div>
 
     <!-- Cloudflare Web Analytics -->
     <script defer src="https://static.cloudflareinsights.com/beacon.min.js" data-cf-beacon='{"token": "e9cd556fb46f4880a8842d37e2dfe3fb"}'></script>
