fix text highlight issue

--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
               class="icon-btn info-btn"
               id="outputHelp"
               data-tooltip="$0 = full match, $1..$n = groups, $&lt;name&gt; = named group, \n = newline"
+              data-tooltip-align="right"
               aria-label="Output help"
             >
               ?
@@ -159,7 +160,7 @@
                 <span>Output</span>
                 <span class="hint" id="outputMeta">0 items</span>
               </div>
-              <button class="icon-btn" id="copyOutputBtn" data-tooltip="Copy output" aria-label="Copy output">
+              <button class="icon-btn" id="copyOutputBtn" data-tooltip="Copy output" data-tooltip-align="right" aria-label="Copy output">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
                   <rect x="9" y="9" width="13" height="13" rx="2" ry="2" />
                   <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1" />
